fix: adjust line height for improved readability in body styles

--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@
 
 body {
   font-family: "Outfit", sans-serif;
-  line-height: 1.5;
+  line-height: 1.6;
   font-size: 16px;
   transition: color 2s ease;
   overflow-x: hidden;
